# lab-3-ASD

./: .gitignore  CMakeLists.txt  dinamic.cpp  dinamic.h  main.cpp  optimal.cpp  optimal.h  test.cpp
